--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <div class="illustration"><img src="images/Contact-bro.svg" alt="Contact"></div>
     <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://bouzianiimane.github.io/">
+      <input type="hidden" name="_next" value="https://bouzianiimane.github.io/MY-CV">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -408,3 +408,4 @@
   </script>
 </body>
 </html>
+
