--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
       </a>
     </p>
   </section>
-
-  <!-- Contact Form Section -->
+<!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
     <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
-    <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
+    <div class="illustration"><img src="images/Contact-bro.svg" alt="Contact"></div>
     <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://bouzianiimane.github.io/MY-CV">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -333,4 +333,5 @@
   </script>
 </body>
 </html>
+
 
