--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Quicksand', sans-serif;
       background-color: #fafafa;
@@ -30,7 +33,18 @@
       50% {background-position: 100% 50%;}
       100% {background-position: 0% 50%;}
     }
-    header h1 { font-size: 2.5em; margin: 0; }
+    header h1 {
+      font-size: 2.5em; 
+      margin: 0;
+      background: linear-gradient(90deg, #fbc2eb, #a6c1ee, #fbc2eb);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: gradientText 5s infinite alternate;
+    }
+    @keyframes gradientText {
+      0% { background-position: 0%; }
+      100% { background-position: 100%; }
+    }
     header p { margin: 10px 0 0; font-size: 1.1em; }
     nav {
       display: flex;
@@ -67,15 +81,16 @@
       transition: transform 0.3s, box-shadow 0.3s, background 0.5s, color 0.5s;
     }
     section:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      transform: translateY(-5px) scale(1.01);
+      box-shadow: 0 12px 30px rgba(166, 193, 238, 0.3);
     }
     section h2 { color: #a6c1ee; display: flex; align-items: center; gap: 10px; margin-bottom: 20px; }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     ul { list-style: none; padding: 0; }
     ul li::before { content: ' | '; margin-right: 10px; }
     .illustration { text-align: center; margin: 20px 0; }
-    .illustration img { max-width: 300px; border-radius: 15px; animation: floating 4s ease-in-out infinite; }
+    .illustration img { max-width: 300px; border-radius: 15px; animation: floating 4s ease-in-out infinite; transition: transform 0.5s; }
+    .illustration img:hover { transform: scale(1.05) rotate(-2deg); }
     @keyframes floating { 0% { transform: translateY(0px); } 50% { transform: translateY(-15px); } 100% { transform: translateY(0px); } }
     footer {
       text-align: center;
@@ -160,9 +175,63 @@
       transition: background 0.3s;
     }
     .contact-form button:hover { background: #fbc2eb; }
+
+    /* Skills progress bars */
+    .skill-bar { margin-top: 20px; }
+    .bar {
+      background: #eee; border-radius: 10px;
+      overflow: hidden; margin: 8px 0;
+    }
+    .progress {
+      height: 10px; background: linear-gradient(90deg, #a6c1ee, #fbc2eb);
+      border-radius: 10px; animation: grow 2s ease forwards;
+    }
+    @keyframes grow { from { width: 0; } }
+
+    /* Hire me button */
+    #hireBtn {
+      position: fixed;
+      bottom: 90px;
+      right: 30px;
+      background: #fbc2eb;
+      padding: 12px 20px;
+      border-radius: 30px;
+      color: white;
+      font-weight: 600;
+      text-decoration: none;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
+      z-index: 999;
+    }
+    #hireBtn:hover { transform: scale(1.1); background: #a6c1ee; }
+
+    /* Preloader */
+    #preloader {
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: #fafafa;
+      display: flex; align-items: center; justify-content: center;
+      z-index: 2000;
+    }
+    .spinner {
+      width: 50px; height: 50px;
+      border: 6px solid #ddd;
+      border-top: 6px solid #a6c1ee;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
+
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="spinner"></div>
+  </div>
+
   <header>
     <h1>Bouziani Imane</h1>
     <p id="typing"></p>
@@ -217,6 +286,15 @@
       <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
       <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
     </ul>
+    <!-- Progress bars -->
+    <div class="skill-bar">
+      <p>Python</p>
+      <div class="bar"><div class="progress" style="width:90%"></div></div>
+      <p>JavaScript</p>
+      <div class="bar"><div class="progress" style="width:80%"></div></div>
+      <p>Machine Learning</p>
+      <div class="bar"><div class="progress" style="width:85%"></div></div>
+    </div>
   </section>
 
   <section id="languages" data-aos="fade-up">
@@ -267,7 +345,8 @@
       </a>
     </p>
   </section>
-<!-- Contact Form Section -->
+
+  <!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
     <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
     <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
@@ -282,57 +361,59 @@
   </section>
 
   <footer>
-    <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
-    <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
-      Thanks to my mom and dad for their endless love and support 🤍
-    </p>
-  </footer>
-  <footer>
-    <p>@ Bouziani Imane.com - 2025</p>
+    <p>© 2025 Bouziani Imane | All Rights Reserved</p>
+    <div>
+      <a href="https://linkedin.com" target="_blank" style="color:white; margin:0 10px;"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com" target="_blank" style="color:white; margin:0 10px;"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com" target="_blank" style="color:white; margin:0 10px;"><i class="fab fa-twitter"></i></a>
+    </div>
   </footer>
 
-  <button id="topBtn"><i class="fa-solid fa-arrow-up"></i></button>
+  <button id="topBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+  <a href="#contact" id="hireBtn">💼 Hire Me</a>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    AOS.init({ duration: 1000, once: true });
+    // Preloader
+    window.addEventListener("load", function() {
+      document.getElementById("preloader").style.display = "none";
+    });
 
     // Typing effect
-    const text = " Artificial Intelligence Engineer ";
+    const typingElement = document.getElementById("typing");
+    const text = "AI Engineer │ Computer Scientist │ Innovator │ Educator";
     let i = 0;
-    function typeWriter() {
+    function typing() {
       if (i < text.length) {
-        document.getElementById("typing").innerHTML += text.charAt(i);
+        typingElement.innerHTML += text.charAt(i);
         i++;
-        setTimeout(typeWriter, 100);
+        setTimeout(typing, 80);
       }
     }
-    typeWriter();
-
-    // Back to top button
-    const btn = document.getElementById("topBtn");
-    window.onscroll = () => {
-      if (document.documentElement.scrollTop > 200) {
-        btn.style.display = "block";
-      } else {
-        btn.style.display = "none";
-      }
-    };
-    btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
+    typing();
 
     // Dark mode toggle
     const darkBtn = document.getElementById("darkBtn");
-    darkBtn.onclick = () => {
+    darkBtn.addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
-      if (document.body.classList.contains("dark-mode")) {
-        darkBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
+      darkBtn.innerHTML = document.body.classList.contains("dark-mode") 
+        ? '<i class="fa-solid fa-sun"></i> Light Mode' 
+        : '<i class="fa-solid fa-moon"></i> Dark Mode';
+    });
+
+    // Scroll to top button
+    const topBtn = document.getElementById("topBtn");
+    window.onscroll = function() {
+      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+        topBtn.style.display = "block";
       } else {
-        darkBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
+        topBtn.style.display = "none";
       }
     };
+    topBtn.addEventListener("click", () => window.scrollTo({ top: 0, behavior: "smooth" }));
+
+    // AOS Animation
+    AOS.init({ duration: 1200 });
   </script>
 </body>
 </html>
-
-
-
