--- a/index.html
+++ b/index.html
@@ -176,18 +176,6 @@
     }
     .contact-form button:hover { background: #fbc2eb; }
 
-    /* Contact info styles (added - does not remove anything) */
-    .contact-info {
-      text-align: center;
-      margin: 10px auto 20px;
-      font-size: 1em;
-      line-height: 1.6;
-      max-width: 800px;
-      color: #444;
-    }
-    .contact-info p { margin: 6px 0; }
-    .contact-info a { color: #a6c1ee; text-decoration: none; font-weight: 600; }
-
     /* Skills progress bars */
     .skill-bar { margin-top: 20px; }
     .bar {
@@ -196,9 +184,8 @@
     }
     .progress {
       height: 10px; background: linear-gradient(90deg, #a6c1ee, #fbc2eb);
-      border-radius: 10px; animation: grow 2s ease forwards;
+      border-radius: 10px; width: 0;  /* Start empty */
     }
-    @keyframes grow { from { width: 0; } }
 
     /* Hire me button */
     #hireBtn {
@@ -301,11 +288,11 @@
     <!-- Progress bars -->
     <div class="skill-bar">
       <p>Python</p>
-      <div class="bar"><div class="progress" style="width:90%"></div></div>
+      <div class="bar"><div class="progress" data-width="90%"></div></div>
       <p>JavaScript</p>
-      <div class="bar"><div class="progress" style="width:80%"></div></div>
+      <div class="bar"><div class="progress" data-width="80%"></div></div>
       <p>Machine Learning</p>
-      <div class="bar"><div class="progress" style="width:85%"></div></div>
+      <div class="bar"><div class="progress" data-width="85%"></div></div>
     </div>
   </section>
 
@@ -358,32 +345,16 @@
     </p>
   </section>
 
-  <!-- Contact Form Section (updated to include contact info + rename message -> inquiry) -->
+  <!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
     <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
-
-    <!-- Added contact info (keeps everything else intact) -->
-    <div class="contact-info">
-      <p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:bouzianiimane1@gmail.com">bouzianiimane1@gmail.com</a></p>
-      <p><i class="fa-solid fa-phone"></i> Phone: +213 664 64 77 79</p>
-      <p><i class="fa-brands fa-whatsapp"></i> WhatsApp: 0673945830</p>
-      <p><i class="fa-solid fa-location-dot"></i> Location: Oran, Algeria</p>
-      <p>
-        <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        &nbsp; | &nbsp;
-        <a href="https://github.com" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a>
-      </p>
-    </div>
-
     <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
-
     <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://bouzianiimane.github.io/MY-CV">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
-      <!-- renamed the textarea name from 'message' to 'inquiry' as requested -->
-      <textarea name="inquiry" rows="5" placeholder="Your Inquiry" required></textarea>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
     </form>
   </section>
@@ -442,6 +413,24 @@
 
     // AOS Animation
     AOS.init({ duration: 1200 });
+
+    // Animate progress bars when skills section is visible
+    const skillSection = document.querySelector("#skills");
+    const progressBars = document.querySelectorAll(".progress");
+
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          progressBars.forEach(bar => {
+            bar.style.transition = "width 2s ease-in-out";
+            bar.style.width = bar.getAttribute("data-width");
+          });
+          observer.unobserve(skillSection); // Run only once
+        }
+      });
+    }, { threshold: 0.5 });
+
+    observer.observe(skillSection);
   </script>
 </body>
 </html>
