--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
     }
     .progress {
       height: 10px; background: linear-gradient(90deg, #a6c1ee, #fbc2eb);
-      border-radius: 10px; width: 0;  /* Start empty */
+      border-radius: 10px; animation: grow 2s ease forwards;
     }
+    @keyframes grow { from { width: 0; } }
 
     /* Hire me button */
     #hireBtn {
@@ -221,6 +222,31 @@
     }
     @keyframes spin {
       100% { transform: rotate(360deg); }
+    }
+
+    /* Contact info styles (added) */
+    .contact-info {
+      max-width: 700px;
+      margin: 0 auto 20px;
+      text-align: left;
+      font-size: 1em;
+      color: #555;
+      line-height: 1.6;
+    }
+    .contact-info p {
+      margin: 6px 0;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+    .contact-info a {
+      color: #a6c1ee;
+      text-decoration: none;
+    }
+    .contact-info i {
+      width: 24px;
+      text-align: center;
+      color: #a6c1ee;
     }
   </style>
 </head>
@@ -288,11 +314,11 @@
     <!-- Progress bars -->
     <div class="skill-bar">
       <p>Python</p>
-      <div class="bar"><div class="progress" data-width="90%"></div></div>
+      <div class="bar"><div class="progress" style="width:90%"></div></div>
       <p>JavaScript</p>
-      <div class="bar"><div class="progress" data-width="80%"></div></div>
+      <div class="bar"><div class="progress" style="width:80%"></div></div>
       <p>Machine Learning</p>
-      <div class="bar"><div class="progress" data-width="85%"></div></div>
+      <div class="bar"><div class="progress" style="width:85%"></div></div>
     </div>
   </section>
 
@@ -344,17 +370,28 @@
       </a>
     </p>
   </section>
-
-  <!-- Contact Form Section -->
+<!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
     <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
+
+    <!-- Added contact information block (keeps everything else intact) -->
+    <div class="contact-info">
+      <p><i class="fa-solid fa-envelope"></i><strong>Email:</strong> <a href="mailto:bouzianiimane1@gmail.com">bouzianiimane1@gmail.com</a></p>
+      <p><i class="fa-solid fa-phone"></i><strong>Phone:</strong> +213 664 64 77 79</p>
+      <p><i class="fa-brands fa-whatsapp"></i><strong>WhatsApp:</strong> 0673945830</p>
+      <p><i class="fa-solid fa-location-dot"></i><strong>Location:</strong> Oran, Algeria</p>
+      <p><i class="fa-brands fa-linkedin"></i><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/bouzianiimane" target="_blank">linkedin.com/in/bouzianiimane</a></p>
+      <p><i class="fa-brands fa-github"></i><strong>GitHub:</strong> <a href="https://github.com/bouzianiimane" target="_blank">github.com/bouzianiimane</a></p>
+    </div>
+
     <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
     <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://bouzianiimane.github.io/MY-CV">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <!-- changed the textarea name to 'inquiry' as requested -->
+      <textarea name="inquiry" rows="5" placeholder="Your Inquiry" required></textarea>
       <button type="submit"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
     </form>
   </section>
@@ -411,33 +448,8 @@
     };
     topBtn.addEventListener("click", () => window.scrollTo({ top: 0, behavior: "smooth" }));
 
-      // AOS Animation
-  AOS.init({ duration: 1200 });
-
-  // Animate progress bars every time skills section is visible
-  const skillSection = document.querySelector("#skills");
-  const progressBars = document.querySelectorAll(".progress");
-
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        // Fill the bars
-        progressBars.forEach(bar => {
-          bar.style.transition = "width 2s ease-in-out";
-          bar.style.width = bar.getAttribute("data-width");
-        });
-      } else {
-        // Reset when not visible
-        progressBars.forEach(bar => {
-          bar.style.transition = "none";
-          bar.style.width = "0";
-        });
-      }
-    });
-  }, { threshold: 0.5 });
-
-  observer.observe(skillSection);
-</script>
+    // AOS Animation
+    AOS.init({ duration: 1200 });
+  </script>
 </body>
 </html>
-
