--- a/index.html
+++ b/index.html
@@ -457,25 +457,31 @@
     // AOS Animation
     AOS.init({ duration: 1200 });
   </script>
-  <script>
+ <script>
   // Animate progress bars when Skills section is visible
   const skillSection = document.getElementById("skills");
   const progressBars = skillSection.querySelectorAll(".progress");
-  let animated = false; // only once
 
   function fillProgressBars() {
     progressBars.forEach(bar => {
       const target = bar.getAttribute("data-width");
       bar.style.width = target;
     });
-    animated = true;
+  }
+
+  function resetProgressBars() {
+    progressBars.forEach(bar => {
+      bar.style.width = "0";
+    });
   }
 
   // Observer to detect when skills section is visible
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
-      if (entry.isIntersecting && !animated) {
+      if (entry.isIntersecting) {
         fillProgressBars();
+      } else {
+        resetProgressBars(); // reset when leaving section
       }
     });
   }, { threshold: 0.4 });
@@ -484,10 +490,13 @@
 
   // Also trigger when clicking nav "Skills"
   document.querySelector('a[href="#skills"]').addEventListener("click", () => {
+    resetProgressBars();
     setTimeout(fillProgressBars, 600); // after scroll
   });
 </script>
 
+
 </body>
 </html>
+
 
