--- a/index.html
+++ b/index.html
@@ -253,6 +253,26 @@
       text-align: center;
       color: #a6c1ee;
     }
+/* Custom cursor */
+body { cursor: none; }
+.cursor {
+  position: fixed;
+  top: 0; left: 0;
+  width: 20px; height: 20px;
+  border: 2px solid #a6c1ee;
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s ease;
+  z-index: 3000;
+}
+.cursor.click {
+  transform: translate(-50%, -50%) scale(1.5);
+  border-color: #fbc2eb;
+}
+
+
+    
   </style>
 </head>
 <body>
@@ -315,6 +335,10 @@
       <li>Databases: MySQL, Oracle, SQL Server</li>
       <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
       <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
+      <li data-aos="fade-up" data-aos-delay="200">Python, Java, C++...</li>
+<li data-aos="fade-up" data-aos-delay="400">AI & Data Science...</li>
+<li data-aos="fade-up" data-aos-delay="600">Web Development...</li>
+
     </ul>
     <!-- Progress bars -->
   <div class="skill-bar">
@@ -495,8 +519,10 @@
   });
 </script>
 
+<div class="cursor"></div>
 
 </body>
 </html>
+
 
 
