--- a/index.html
+++ b/index.html
@@ -383,9 +383,11 @@
   <p>Python</p>
   <div class="bar"><div class="progress" data-width="85%"></div></div>
   <p>JavaScript</p>
-  <div class="bar"><div class="progress" data-width="80%"></div></div>
+  <div class="bar"><div class="progress" data-width="85%"></div></div>
   <p>Machine Learning</p>
   <div class="bar"><div class="progress" data-width="90%"></div></div>
+  <p>Python</p>
+  <div class="bar"><div class="progress" data-width="85%"></div></div>
 </div>
 
   </section>
@@ -570,6 +572,7 @@
 
 </body>
 </html>
+
 
 
 
