--- a/index.html
+++ b/index.html
@@ -381,13 +381,11 @@
     <!-- Progress bars -->
   <div class="skill-bar">
   <p>Python</p>
-  <div class="bar"><div class="progress" data-width="85%"></div></div>
-  <p>JavaScript</p>
-  <div class="bar"><div class="progress" data-width="85%"></div></div>
+  <div class="bar"><div class="progress" data-width="90%"></div></div>
+  <p>Deep learning </p>
+  <div class="bar"><div class="progress" data-width="90%"></div></div>
   <p>Machine Learning</p>
   <div class="bar"><div class="progress" data-width="90%"></div></div>
-  <p>Python</p>
-  <div class="bar"><div class="progress" data-width="85%"></div></div>
 </div>
 
   </section>
@@ -572,6 +570,7 @@
 
 </body>
 </html>
+
 
 
 
